Readme and last modifications
